; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_effect.c_parse_skip_constants_string.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_effect.c_parse_skip_constants_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INITIAL_CONST_NAMES_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8** (i8*, i32*)* @parse_skip_constants_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8** @parse_skip_constants_string(i8* %0, i32* %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %11 = load i32, i32* @INITIAL_CONST_NAMES_SIZE, align 4
  store i32 %11, i32* %10, align 4
  %12 = call i32 (...) @GetProcessHeap()
  %13 = load i32, i32* %10, align 4
  %14 = zext i32 %13 to i64
  %15 = mul i64 8, %14
  %16 = trunc i64 %15 to i32
  %17 = call i8** @HeapAlloc(i32 %12, i32 0, i32 %16)
  store i8** %17, i8*** %6, align 8
  %18 = load i8**, i8*** %6, align 8
  %19 = icmp ne i8** %18, null
  br i1 %19, label %21, label %20

20:                                               ; preds = %2
  store i8** null, i8*** %3, align 8
  br label %73

21:                                               ; preds = %2
  %22 = load i32*, i32** %5, align 8
  store i32 0, i32* %22, align 4
  %23 = load i8*, i8** %4, align 8
  store i8* %23, i8** %9, align 8
  br label %24

24:                                               ; preds = %50, %21
  %25 = call i8* @next_valid_constant_name(i8** %9)
  store i8* %25, i8** %8, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %27, label %58

27:                                               ; preds = %24
  %28 = load i32*, i32** %5, align 8
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* %10, align 4
  %31 = icmp eq i32 %29, %30
  br i1 %31, label %32, label %50

32:                                               ; preds = %27
  %33 = load i32, i32* %10, align 4
  %34 = mul i32 %33, 2
  store i32 %34, i32* %10, align 4
  %35 = call i32 (...) @GetProcessHeap()
  %36 = load i8**, i8*** %6, align 8
  %37 = load i32, i32* %10, align 4
  %38 = zext i32 %37 to i64
  %39 = mul i64 8, %38
  %40 = trunc i64 %39 to i32
  %41 = call i8** @HeapReAlloc(i32 %35, i32 0, i8** %36, i32 %40)
  store i8** %41, i8*** %7, align 8
  %42 = load i8**, i8*** %7, align 8
  %43 = icmp ne i8** %42, null
  br i1 %43, label %48, label %44

44:                                               ; preds = %32
  %45 = call i32 (...) @GetProcessHeap()
  %46 = load i8**, i8*** %6, align 8
  %47 = call i32 @HeapFree(i32 %45, i32 0, i8** %46)
  store i8** null, i8*** %3, align 8
  br label %73

48:                                               ; preds = %32
  %49 = load i8**, i8*** %7, align 8
  store i8** %49, i8*** %6, align 8
  br label %50

50:                                               ; preds = %48, %27
  %51 = load i8*, i8** %8, align 8
  %52 = load i8**, i8*** %6, align 8
  %53 = load i32*, i32** %5, align 8
  %54 = load i32, i32* %53, align 4
  %55 = add i32 %54, 1
  store i32 %55, i32* %53, align 4
  %56 = zext i32 %54 to i64
  %57 = getelementptr inbounds i8*, i8** %52, i64 %56
  store i8* %51, i8** %57, align 8
  br label %24

58:                                               ; preds = %24
  %59 = call i32 (...) @GetProcessHeap()
  %60 = load i8**, i8*** %6, align 8
  %61 = load i32*, i32** %5, align 8
  %62 = load i32, i32* %61, align 4
  %63 = zext i32 %62 to i64
  %64 = mul i64 %63, 8
  %65 = trunc i64 %64 to i32
  %66 = call i8** @HeapReAlloc(i32 %59, i32 0, i8** %60, i32 %65)
  store i8** %66, i8*** %7, align 8
  %67 = load i8**, i8*** %7, align 8
  %68 = icmp ne i8** %67, null
  br i1 %68, label %71, label %69

69:                                               ; preds = %58
  %70 = load i8**, i8*** %6, align 8
  store i8** %70, i8*** %3, align 8
  br label %73

71:                                               ; preds = %58
  %72 = load i8**, i8*** %7, align 8
  store i8** %72, i8*** %3, align 8
  br label %73

73:                                               ; preds = %71, %69, %44, %20
  %74 = load i8**, i8*** %3, align 8
  ret i8** %74
}

declare dso_local i8** @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i8* @next_valid_constant_name(i8**) #1

declare dso_local i8** @HeapReAlloc(i32, i32, i8**, i32) #1

declare dso_local i32 @HeapFree(i32, i32, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
